# gpcl

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE_1_0.txt  README.md  gpcl.hpp
.github/workflows/: cmake.yml
gpcl/: assert.hpp  buffer.hpp  buffer_sequence.hpp  clock.hpp  clone_ptr.hpp  condition_variable.hpp  creation_tag.hpp  decay_copy.hpp  default_malloc_free_user_allocator.hpp  error.hpp  event.hpp  expected.hpp  expected_fwd.hpp  ext.hpp  file.hpp  in_place.hpp  in_place_t.hpp  intrusive_list.hpp  inttypes.hpp  is_basic_lockable.hpp  is_lockable.hpp  lock_file.hpp  memory_resource.hpp  message_queue.hpp  mutex.hpp  narrow_cast.hpp  noncopyable.hpp  object_pool.hpp  offset_ptr.hpp  optional.hpp  optional_fwd.hpp  pool.hpp  pool_allocator.hpp  semaphore.hpp  simple_segregated_storage.hpp  span.hpp  thread.hpp  thread_annotations.hpp  thread_attributes.hpp  time.hpp  (+6 more)
gpcl/detail/: chrono.hpp  compressed_pair.hpp  config.hpp  error.hpp  expected.hpp  optional.hpp  posix_clock.hpp  posix_condition_variable.hpp  posix_file.hpp  posix_lock_file.hpp  posix_message_queue.hpp  posix_mutex.hpp  posix_semaphore.hpp  posix_thread.hpp  posix_timer.hpp  thread_annotations.hpp  type_traits.hpp  unique_file_descriptor.hpp  unique_handle.hpp  unreachable.hpp  utility.hpp  win_clock.hpp  win_condition_variable.hpp  win_lock_file.hpp  win_mutex.hpp  win_semaphore.hpp  win_thread.hpp
gpcl/detail/impl/: error.ipp  posix_clock.ipp  posix_condition_variable.ipp  posix_file.ipp  posix_lock_file.ipp  posix_message_queue.ipp  posix_mutex.ipp  posix_semaphore.ipp  posix_thread.ipp  posix_timer.ipp  unique_file_descriptor.ipp  unique_handle.ipp  unreachable.ipp  win_clock.ipp  win_condition_variable.ipp  win_lock_file.ipp  win_mutex.ipp  win_semaphore.ipp  win_thread.ipp
gpcl/ext/: mqtt.hpp  sqlite.hpp
gpcl/ext/detail/: config.hpp
gpcl/ext/impl/: mqtt.ipp  sqlite.ipp
gpcl/ext/xml/impl/: parser.ipp
gpcl/impl/: expected.hpp  ext-src.hpp  memory_resource.hpp  offset_ptr.hpp  src.hpp
gpcl/pmr/: default_resource.hpp  memory_resource.hpp  monotonic_buffer_resource.hpp  new_delete_resource.hpp  null_memory_resource.hpp  polymorphic_allocator.hpp
gpcl/pmr/impl/: default_resource.ipp  monotonic_buffer_resource.ipp  new_delete_resource.ipp  null_memory_resource.ipp
lib/: src.cpp
tests/: CMakeLists.txt  expected_test.cpp  include_src.cpp  lock_file_test.cpp  monotonic_buffer_resource_test.cpp  time_test.cpp  unique_resource_test.cpp
tools/: CMakeLists.txt  add_copyright.cmake  add_copyright.cmake.in  add_copyright.cpp  build_doc.cmake.in  generate_convenient_header.cmake  gpcl.hpp.in  standardese.ini.in
